--- a/manifest.yml
+++ b/manifest.yml
@@ -2,6 +2,8 @@
 applications:
 - name: spring-music
   memory: 1G
-  random-route: true
   path: build/libs/spring-music.jar
-
+  instances: 2
+  buildpack: java_buildpack_offline
+  services:
+  - spring-music-db
