--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,12 @@ spring:
 management:
   security:
     enabled: false
+  cloudfoundry:
+    skip-ssl-validation: true
+  health:
+    mongo:
+      enabled: false
+endpoints:
+    health:
+        sensitive: false
+        enabled: true
