--- a/manifest.yml
+++ b/manifest.yml
@@ -7,3 +7,6 @@ applications:
   buildpack: java_buildpack_offline
   services:
   - spring-music-db
+#  env:
+    JBP_CONFIG_SPRING_AUTO_RECONFIGURATION: '{enabled: false}'
+#    JBP_CONFIG_OPEN_JDK_JRE: '{ jre: { version: 11.+ } }'
