--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,38 @@
-
----
 spring:
   jpa:
     generate-ddl: true
 
-# turn off the security on the actuator end points as this is a demo app
 management:
-  security:
-    enabled: false
-  cloudfoundry:
-    skip-ssl-validation: true
-  health:
-    mongo:
-      enabled: false
-endpoints:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
     health:
-        sensitive: false
-        enabled: true
+      show-details: always
+
+---
+spring:
+  profiles: mysql
+  datasource:
+    url: "jdbc:mysql://localhost/music"
+    driver-class-name: com.mysql.jdbc.Driver
+    username:
+    password:
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL55Dialect
+
+---
+spring:
+  profiles: postgres
+  datasource:
+    url: "jdbc:postgresql://localhost/music"
+    driver-class-name: org.postgresql.Driver
+    username: postgres
+    password:
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.ProgressDialect
